--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.6.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/material-bottom-tabs": "^5.2.14",
+    "@react-navigation/material-bottom-tabs": "^5.2.15",
     "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
@@ -26,6 +26,8 @@
     "react-native-material-dropdown-v2": "^0.11.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^4.0.1",
+    "react-native-picker-select": "^7.0.0",
+    "react-native-progress-bar-animated": "^1.0.6",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
