--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.6.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/material-bottom-tabs": "^5.2.15",
     "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
+    "@valdio/react-native-scrollable-tabview": "^0.8.12",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-datepicker": "^1.7.2",
